--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/preset-react": "^7.22.15",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-datepicker": "^4.18.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-oc-modal-module": "^0.0.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
